--- a/src/views/home/test.html
+++ b/src/views/home/test.html
@@ -10,7 +10,7 @@
 <div id="container">
 	<my-head></my-head>
 </div>
-<script src="../../static/es6/lib/vue.js"></script>
-<script src="../../static/es6/home/test.js"></script>
+<script src="../../js/lib/vue.js"></script>
+<script src="../../js/home/test.js"></script>
 </body>
 </html>
