--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -5,7 +5,7 @@
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="screen-orientation" content="portrait">
 	<title>二哲 - Vue构建多页项目</title>
-	<link rel="stylesheet" href="../../static/css/home/index.css">
+	<link rel="stylesheet" href="../../css/home/index.css">
 </head>
 <body>
 <div id="container">
@@ -14,7 +14,7 @@
 	<index-info></index-info>
 	<div id="kodo" v-tap="sayHi">打开控制台,看netWork 我是异步加载的js模块</div>
 </div>
-<script src="../../static/es6/lib/vue.js"></script>
-<script src="../../static/es6/home/index.js"></script>
+<script src="../../js/lib/vue.js"></script>
+<script src="../../js/home/index.js"></script>
 </body>
 </html>
