--- a/src/views/shopping/buy.html
+++ b/src/views/shopping/buy.html
@@ -5,7 +5,7 @@
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="screen-orientation" content="portrait">
 	<title>二哲 - vue多页项目构建</title>
-	<link rel="stylesheet" href="../../static/css/shopping/buy.css">
+	<link rel="stylesheet" href="../../css/shopping/buy.css">
 </head>
 <body>
 <h3 id="buy">我是buy全局样式</h3>
@@ -13,7 +13,7 @@
 	<list></list>
 	<loading></loading>
 </div>
-<script src="../../static/es6/lib/vue.js"></script>
-<script src="../../static/es6/shopping/buy.js"></script>
+<script src="../../js/lib/vue.js"></script>
+<script src="../../js/shopping/buy.js"></script>
 </body>
 </html>
