--- a/public/views/home/test.html
+++ b/public/views/home/test.html
@@ -10,7 +10,7 @@
 <div id="container">
 	<my-head></my-head>
 </div>
-<script src="yourCDNLink/js/lib/vue.js"></script>
+<script src="yourCDNLink/js/lib/vue-0cffaa966a.js"></script>
 <script src="yourCDNLink/js/home/test-d0202a97fb.js"></script>
 </body>
 </html>
