--- a/public/views/shopping/buy.html
+++ b/public/views/shopping/buy.html
@@ -13,7 +13,7 @@
 	<list></list>
 	<loading></loading>
 </div>
-<script src="yourCDNLink/js/lib/vue.js"></script>
+<script src="yourCDNLink/js/lib/vue-0cffaa966a.js"></script>
 <script src="yourCDNLink/js/shopping/buy-dbb715ffc0.js"></script>
 </body>
 </html>
