使用vue2.0 v-tap2.0 删除无用log

--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -12,7 +12,7 @@
 	<my-head></my-head>
 	<loading></loading>
 	<index-info></index-info>
-	<div id="kodo" v-tap="sayHi">打开控制台,看netWork 我是异步加载的js模块</div>
+	<div id="kodo" v-tap="{methods : sayHi}" >打开控制台,看netWork 我是异步加载的js模块</div>
 </div>
 <script src="../../js/lib/vue.js"></script>
 <script src="../../js/home/index.js"></script>
