--- a/public/views/home/index.html
+++ b/public/views/home/index.html
@@ -5,16 +5,16 @@
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="screen-orientation" content="portrait">
 	<title>二哲 - Vue构建多页项目</title>
-	<link rel="stylesheet" href="../../css/home/index-6b13d4e8b6.css">
+	<link rel="stylesheet" href="../../css/home/index.css">
 </head>
 <body>
 <div id="container">
 	<my-head></my-head>
 	<loading></loading>
 	<index-info></index-info>
-	<div id="kodo" v-tap="sayHi">打开控制台,看netWork 我是异步加载的js模块</div>
+	<div id="kodo" v-tap="{methods : sayHi}" >打开控制台,看netWork 我是异步加载的js模块</div>
 </div>
-<script src="../../js/lib/vue-0cffaa966a.js"></script>
-<script src="../../js/home/index-85b442c355.js"></script>
+<script src="../../js/lib/vue.js"></script>
+<script src="../../js/home/index.js"></script>
 </body>
 </html>
