--- a/public/views/shopping/buy.html
+++ b/public/views/shopping/buy.html
@@ -5,7 +5,7 @@
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="screen-orientation" content="portrait">
 	<title>二哲 - vue多页项目构建</title>
-	<link rel="stylesheet" href="yourCDNLink/css/shopping/buy-907176ff76.css">
+	<link rel="stylesheet" href="../../css/shopping/buy.css">
 </head>
 <body>
 <h3 id="buy">我是buy全局样式</h3>
@@ -13,7 +13,7 @@
 	<list></list>
 	<loading></loading>
 </div>
-<script src="yourCDNLink/js/lib/vue-0cffaa966a.js"></script>
-<script src="yourCDNLink/js/shopping/buy-dbb715ffc0.js"></script>
+<script src="../../js/lib/vue.js"></script>
+<script src="../../js/shopping/buy.js"></script>
 </body>
 </html>
