--- a/public/views/home/test.html
+++ b/public/views/home/test.html
@@ -10,7 +10,7 @@
 <div id="container">
 	<my-head></my-head>
 </div>
-<script src="../../js/lib/vue.js"></script>
-<script src="../../js/home/test.js"></script>
+<script src="yourCDNLink/js/lib/vue-7de83fee84.js"></script>
+<script src="yourCDNLink/js/home/test-05a0110e1e.js"></script>
 </body>
 </html>
