--- a/public/views/index.html
+++ b/public/views/index.html
@@ -27,7 +27,7 @@
 			width:60px;
 			margin:0 auto;
 			height:60px;
-			background: url("../images/home/logo.jpg");
+			background: url("yourCDNLink/images/home/logo.jpg");
 			background-size: cover;
 			border-radius: 50%;
 			box-shadow: 0 14px 27px 0 rgba(0, 0, 0, 0.1);
