add: 支持高版本node，webpack升级3.x，优化构建速度

--- a/public/views/home/index.html
+++ b/public/views/home/index.html
@@ -5,7 +5,7 @@
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="screen-orientation" content="portrait">
 	<title>二哲 - Vue构建多页项目</title>
-	<link rel="stylesheet" href="../../css/home/index-d181a76eb0.css">
+	<link rel="stylesheet" href="../../css/home/index-324a703baf.css">
 </head>
 <body>
 <div id="container">
@@ -14,7 +14,7 @@
 	<index-info></index-info>
 	<div id="kodo" v-tap="{methods : sayHi}" >打开控制台,看netWork 我是异步加载的js模块</div>
 </div>
-<script src="../../js/lib/vue-7de83fee84.js"></script>
-<script src="../../js/home/index-6fca0e610a.js"></script>
+<script src="https://cdn.bootcss.com/vue/2.4.2/vue.js"></script>
+<script src="../../js/home/index-7f5e06957f.js"></script>
 </body>
 </html>
