--- a/public/views/home/test.html
+++ b/public/views/home/test.html
@@ -10,7 +10,7 @@
 <div id="container">
 	<my-head></my-head>
 </div>
-<script src="yourCDNLink/js/lib/vue-7de83fee84.js"></script>
-<script src="yourCDNLink/js/home/test-05a0110e1e.js"></script>
+<script src="https://cdn.bootcss.com/vue/2.4.2/vue.js"></script>
+<script src="YOURCDNLINK/js/home/test-548f66a5e0.js"></script>
 </body>
 </html>
