--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -14,7 +14,7 @@
 	<index-info></index-info>
 	<div id="kodo" v-tap="{methods : sayHi}" >打开控制台,看netWork 我是异步加载的js模块</div>
 </div>
-<script src="../../js/lib/vue.js"></script>
+<script src="https://cdn.bootcss.com/vue/2.4.2/vue.js"></script>
 <script src="../../js/home/index.js"></script>
 </body>
 </html>
