--- a/src/views/home/test.html
+++ b/src/views/home/test.html
@@ -10,7 +10,7 @@
 <div id="container">
 	<my-head></my-head>
 </div>
-<script src="../../js/lib/vue.js"></script>
+<script src="https://cdn.bootcss.com/vue/2.4.2/vue.js"></script>
 <script src="../../js/home/test.js"></script>
 </body>
 </html>
