--- a/src/views/shopping/buy.html
+++ b/src/views/shopping/buy.html
@@ -13,7 +13,7 @@
 	<list></list>
 	<loading></loading>
 </div>
-<script src="../../js/lib/vue.js"></script>
+<script src="https://cdn.bootcss.com/vue/2.4.2/vue.js"></script>
 <script src="../../js/shopping/buy.js"></script>
 </body>
 </html>
